--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,9 @@ header,
     cursor: pointer;
 }
 
-.font-size126 {
+/* .font-size126 {
     font-size: 100px
-}
+} */
 
 @media (max-width: 768px) {
     .navbar:not(.top-nav-collapse) {
