--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ body {
 .about-us-color {
     color: #3a3e8b !important;
 }
+.about-us-title-color {
+    color: #eb2b97 !important;
+}
 .footer-color {
     background-color: #3a3e8b!important;
 }
@@ -67,7 +70,15 @@ body {
     width: 100%;
     color: #fff;
     padding-top: 1rem; }
-    
+    .cover-other-pages {
+        background: #2b2d34 url('../img/De Atlas Images/1\ -\ Copy.jpg') center;
+        background-size: cover;
+        min-height: 20rem;
+        height: auto;
+        border-radius: 0;
+        width: 100%;
+        color: #fff;
+        }
     .cover h1 {
       font-weight: 200; }
     
