--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,22 @@ body {
 .about-us-title-color {
     color: #eb2b97 !important;
 }
+
+.style-unordered-list {
+    list-style: none;
+}
+
+.style-unordered-list li::before {
+    content: "\2022";
+    color: #eb2b97;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+    font-size: 2em;
+    margin-bottom: auto;
+  }
+
 .footer-color {
     background-color: #3a3e8b!important;
 }
