--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-html,
-body,
-header,
-#intro{
+html, body, header, #intro {
     height: 100%;
 }
 
@@ -25,9 +22,11 @@ body {
     border-radius: 24px;
     cursor: pointer;
 }
+
 .about-us-color {
     color: #3a3e8b !important;
 }
+
 .about-us-title-color {
     color: #eb2b97 !important;
 }
@@ -40,12 +39,12 @@ body {
     content: "\2022";
     color: #eb2b97;
     font-weight: bold;
-    display: inline-block; 
+    display: inline-block;
     width: 1em;
     margin-left: -1em;
     font-size: 2em;
     margin-bottom: auto;
-  }
+}
 
 .footer-color {
     background-color: #3a3e8b!important;
@@ -56,28 +55,56 @@ body {
     width: 6rem;
     height: 0.3rem;
     background-color: #dfe1e5;
-    margin: 2rem auto; }
-    
-  .navbar-trans {
-    background: transparent; }
-  
-  a.navbar-brand, a.logo {
+    margin: 2rem auto;
+}
+
+.navbar-trans {
+    background: transparent;
+}
+
+a.navbar-brand, a.logo {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #fff !important;
     font-size: 2rem;
     font-weight: bold;
-    margin-top: 0; }
-  
-  a.logo:hover, a.logo:active, a.logo:focus {
-    text-decoration: none; }
-  
-  li.nav-item .btn {
+    margin-top: 0;
+}
+
+a.logo:hover, a.logo:active, a.logo:focus {
+    text-decoration: none;
+}
+
+li.nav-item .btn {
     margin-top: .2rem;
-    margin-left: .4rem; }
-  li.nav-item .btn-white {
-    color: #46484a; }
-  
-  .cover {
+    margin-left: .4rem;
+}
+
+li.nav-item .btn-white {
+    color: #46484a;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #CC0000!important;
+}
+
+.navbar-nav .nav-item .nav-link:focus {
+    color: #FF8800!important;
+}
+
+.navbar-nav .nav-item .nav-link.is-active {
+    /* color: #007E33!important; */
+    border-radius: 24px;
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: #05c7f2 !important;
+    color: white !important;
+}
+
+.navbar-nav .nav-item .nav-link:visited {
+    color: #0099CC!important;
+}
+
+.cover {
     background: #2b2d34 url('../img/De Atlas Images/Homepage image.png') center;
     background-size: cover;
     min-height: 50rem;
@@ -85,118 +112,142 @@ body {
     border-radius: 0;
     width: 100%;
     color: #fff;
-    padding-top: 1rem; }
+    padding-top: 1rem;
+}
+
 .cover-other-pages {
-        background: #2b2d34 url('../img/De Atlas Images/1\ -\ Copy.jpg') center;
-        background-size: cover;
-        min-height: 20rem;
-        height: auto;
-        border-radius: 0;
-        width: 100%;
-        color: #fff;
-        }
- .cover-admissions-page {
-            background: #2b2d34 url('../img/De Atlas Images/9\ -\ Copy.jpg') center;
-            background-size: cover;
-            min-height: 20rem;
-            height: auto;
-            border-radius: 0;
-            width: 100%;
-            color: #fff;
-            }
-    .cover h1 {
-      font-weight: 200; }
-    
-    .cover p.lead {
-      margin: 2rem auto;
-      color: rgba(255, 255, 255, 0.75); }
-    
-    .cover .cover-container {
-      display: table;
-      height: 100%;
-      min-height: 44rem;
-      margin: 0 auto; }
-      
-      .btn-primary, .btn-outline-primary, .btn-secondary, .btn-outline-secondary, .btn-white, .btn-outline-white, .btn-success, .btn-outline-success, .btn-info, .btn-outline-info, .btn-warning, .btn-outline-warning, .btn-danger, .btn-outline-danger {
+    background: #2b2d34 url('../img/De Atlas Images/1\ -\ Copy.jpg') center;
+    background-size: cover;
+    min-height: 20rem;
+    height: auto;
+    border-radius: 0;
+    width: 100%;
+    color: #fff;
+}
+
+.cover-admissions-page {
+    background: #2b2d34 url('../img/De Atlas Images/9\ -\ Copy.jpg') center;
+    background-size: cover;
+    min-height: 20rem;
+    height: auto;
+    border-radius: 0;
+    width: 100%;
+    color: #fff;
+}
+
+.cover h1 {
+    font-weight: 200;
+}
+
+.cover p.lead {
+    margin: 2rem auto;
+    color: rgba(255, 255, 255, 0.75);
+}
+
+.cover .cover-container {
+    display: table;
+    height: 100%;
+    min-height: 44rem;
+    margin: 0 auto;
+}
+
+.btn-primary, .btn-outline-primary, .btn-secondary, .btn-outline-secondary, .btn-white, .btn-outline-white, .btn-success, .btn-outline-success, .btn-info, .btn-outline-info, .btn-warning, .btn-outline-warning, .btn-danger, .btn-outline-danger {
     font-size: .75rem;
     text-transform: uppercase;
     font-weight: 700;
-    border-radius: .3rem; }
-  
-  .btn-outline-primary, .btn-outline-secondary, .btn-outline-white, .btn-outline-success, .btn-outline-info, .btn-outline-warning, .btn-outline-danger {
-    border-width: 0.15rem; }
-  
-  .btn-lg {
+    border-radius: .3rem;
+}
+
+.btn-outline-primary, .btn-outline-secondary, .btn-outline-white, .btn-outline-success, .btn-outline-info, .btn-outline-warning, .btn-outline-danger {
+    border-width: 0.15rem;
+}
+
+.btn-lg {
     padding: 1.1rem 2.5rem;
-    font-size: .9rem; }
-  
-  .btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+    font-size: .9rem;
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: #59a0d7;
-    border-color: #59a0d7; }
-  
-  .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+    border-color: #59a0d7;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: #4089c1;
-    border-color: #4089c1; }
-  
-  .btn-outline-primary, .btn-outline-primary:visited {
+    border-color: #4089c1;
+}
+
+.btn-outline-primary, .btn-outline-primary:visited {
     color: #59a0d7;
     border-color: #59a0d7;
-    background: none; }
-  
-  .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active {
+    background: none;
+}
+
+.btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active {
     background-color: #59a0d7;
     border-color: #59a0d7;
-    color: #fff; }
-  
-  .btn-secondary {
+    color: #fff;
+}
+
+.btn-secondary {
     border-color: #696b6e;
     background-color: #696b6e;
-    color: #fff; }
-  
-  .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
+    color: #fff;
+}
+
+.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
     border-color: #46484a;
     background-color: #46484a;
-    color: #fff; }
-  
-  .btn-outline-secondary, .btn-outline-secondary:visited {
+    color: #fff;
+}
+
+.btn-outline-secondary, .btn-outline-secondary:visited {
     color: #696b6e;
     border-color: #696b6e;
-    background: none; }
-  
-  .btn-outline-secondary:hover, .btn-outline-secondary:focus, .btn-outline-secondary:active {
+    background: none;
+}
+
+.btn-outline-secondary:hover, .btn-outline-secondary:focus, .btn-outline-secondary:active {
     border-color: #696b6e;
     background: #696b6e;
-    color: #fff; }
-  
-  .btn-white {
+    color: #fff;
+}
+
+.btn-white {
     border-color: #fff;
     background-color: #fff;
-    color: #46484a; }
-  
-  .btn-white:hover, .btn-white:focus, .btn-white:active {
+    color: #46484a;
+}
+
+.btn-white:hover, .btn-white:focus, .btn-white:active {
     border-color: #dfe1e5;
     background-color: #dfe1e5;
-    color: #46484a; }
-  
-  .btn-outline-white, .btn-outline-white:visited {
+    color: #46484a;
+}
+
+.btn-outline-white, .btn-outline-white:visited {
     background: none;
     color: #fff;
-    border-color: #fff; }
-  
-  .btn-outline-white:hover, .btn-outline-white:focus, .btn-outline-white:active {
+    border-color: #fff;
+}
+
+.btn-outline-white:hover, .btn-outline-white:focus, .btn-outline-white:active {
     color: #46484a;
-    background: #fff; }
-  
-  .link-white, link-white:visited {
+    background: #fff;
+}
+
+.link-white, link-white:visited {
     font-size: .75rem;
     text-transform: uppercase;
     font-weight: 700;
     border-radius: .3rem;
     border: 0;
-    color: #fff; }
-  
-  .link-white:hover, .link-white:focus, .link-white:active {
-    color: #dfe1e5 !important; }
+    color: #fff;
+}
+
+.link-white:hover, .link-white:focus, .link-white:active {
+    color: #dfe1e5 !important;
+}
 
 @media (max-width: 768px) {
     .navbar:not(.top-nav-collapse) {
@@ -209,4 +260,3 @@ body {
         background-color: #24355c;
     }
 }
-
