--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
 	line-height: 42px;
     position: absolute;
     display: inline-block;
-	color: rgba(0, 0, 0, 0.8);
+	color: #7957d5;
     text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
 }
 .carousel .carousel-indicators {
@@ -94,15 +94,15 @@ body {
 	width: 10px;
 	height: 10px;
 	margin: 1px 3px;
-	border-radius: 50%;
+	border-radius: 10px !important;
 }
 .carousel-indicators li {	
-	background: #999;
+	background: #7957d5;
 	border-color: transparent;
 	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
 }
 .carousel-indicators li.active {	
-	background: #555;		
+	background: #7957d5;		
 	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
 }
 .footer-color {
