--- a/css/style.css
+++ b/css/style.css
@@ -47,64 +47,78 @@ body {
 }
 
 .col-center {
-	margin: 0 auto;
-	float: none !important;
+    margin: 0 auto;
+    float: none !important;
 }
+
 .carousel {
-	margin: 50px auto;
-	padding: 0 70px;
+    margin: 50px auto;
+    padding: 0 70px;
 }
+
 .carousel .item {
-	color: #999;
-	font-size: 14px;
+    color: rgb(83, 83, 83);
+    font-size: 14px;
     text-align: center;
-	overflow: hidden;
-    min-height: 290px;
+    overflow: hidden;
+    min-height: 100px;
 }
 
 .carousel .testimonial {
-	padding: 30px 0 10px;
+    padding: 30px 0 10px;
 }
-.carousel .overview {	
-	font-style: italic;
+
+.carousel .overview {
+    font-style: italic;
 }
+
 .carousel .overview b {
-	text-transform: uppercase;
-	color: #7AA641;
+    text-transform: uppercase;
+    color: #7AA641;
 }
+
 .carousel .carousel-control {
-	width: 40px;
+    width: 40px;
     height: 40px;
     margin-top: -20px;
     top: 50%;
-	background: none;
+    background: none;
 }
+
 .carousel-control i {
     font-size: 68px;
-	line-height: 42px;
+    line-height: 42px;
     position: absolute;
     display: inline-block;
-	color: #7957d5;
+    color: #7957d5;
     text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
 }
+
 .carousel .carousel-indicators {
-	bottom: -40px;
+    bottom: -40px;
 }
+
 .carousel-indicators li, .carousel-indicators li.active {
-	width: 10px;
-	height: 10px;
-	margin: 1px 3px;
-	border-radius: 10px !important;
+    width: 10px !important;
+    height: 10px !important;
+    margin: 1px 3px;
+    border-radius: 10px !important;
 }
-.carousel-indicators li {	
-	background: #7957d5;
-	border-color: transparent;
-	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
+
+.carousel-indicators li {
+    border-radius: 10px;
+    background: #7957d5;
+    border-color: black;
+    /* box-shadow: inset 0 2px 1px rgba(0,0,0,0.2); */
 }
-.carousel-indicators li.active {	
-	background: #7957d5;		
-	box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
+
+.carousel-indicators li.active {
+    background: #7957d5;
+    box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
 }
+
+
+
 .footer-color {
     background-color: #3a3e8b!important;
 }
