--- a/css/style.css
+++ b/css/style.css
@@ -99,17 +99,19 @@ body {
 }
 
 .carousel-indicators li, .carousel-indicators li.active {
-    width: 10px !important;
+    /* width: 10px !important;
     height: 10px !important;
     margin: 1px 3px;
-    border-radius: 10px !important;
+    border-radius: 10px !important; */
 }
 
 .carousel-indicators li {
-    border-radius: 10px;
-    background: #7957d5;
-    border-color: black;
-    /* box-shadow: inset 0 2px 1px rgba(0,0,0,0.2); */
+    display: block;
+    border: 1px solid #7957d5;
+    background: #fff;
+    outline: 0;
+    transition: .3s ease-out;
+    
 }
 
 .carousel-indicators li.active {
