--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,14 @@ body {
     color: #eb2b97 !important;
 }
 
+.text-info {
+    color: #05c6f1 !important;
+}
+
+.text-description {
+    color: #3b3f8c !important;
+}
+
 .style-unordered-list {
     list-style: none;
 }
