--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body {
 .program-background {
     background-color: #05c6f1;
 }
+
+.why-background {
+    background-color: #f12997;
+}
 .btn-custom {
     background-color: #05c6f1;
 }
