--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
 
 .carousel-indicators li {
     display: block;
-    border: 1px solid #7957d5;
+    border: 1px solid #05c6f1;
     background: #fff;
     outline: 0;
     transition: .3s ease-out;
@@ -138,7 +138,7 @@ body {
 }
 
 .carousel-indicators li.active {
-    background: #7957d5;
+    background: #05c6f1;
     box-shadow: inset 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
